# app/Http/Controllers/API/UserController.php
@@ -59,6 +59,96 @@ use Illuminate\Support\Facades\Hash;
  *         description="Bad request",
  *     )
  * )
+ * @OA\Get(
+ *     path="/v1/users/{id}",
+ *     tags={"Users"},
+ *     summary="Get detail user",
+ *     description="Returns detail of user",
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="User ID",
+ *         @OA\Schema(
+ *             type="string"
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Successful operation",
+ *         @OA\JsonContent(
+ *             ref="#/components/schemas/UserGetDetail"
+ *         ),
+ *     ),
+ *     @OA\Response(
+ *         response=422,
+ *         description="Bad request",
+ *     )
+ * )
+ * @OA\Put(
+ *     path="/v1/users/{id}",
+ *     tags={"Users"},
+ *     summary="Update user",
+ *     description="Returns updated user",
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="User ID",
+ *         @OA\Schema(
+ *             type="string"
+ *         )
+ *     ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 required={"name"},
+ *                 @OA\Property(property="name", type="string", example="John Doe"),
+ *                 @OA\Property(property="password", type="string", example=""),
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Successful operation",
+ *         @OA\JsonContent(
+ *             ref="#/components/schemas/UserPutDetail"
+ *         ),
+ *     ),
+ *     @OA\Response(
+ *         response=422,
+ *         description="Bad request",
+ *     )
+ * )
+ * @OA\Delete(
+ *     path="/v1/users/{id}",
+ *     tags={"Users"},
+ *     summary="Get detail users",
+ *     description="Return deleted user",
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="User ID",
+ *         @OA\Schema(
+ *             type="string"
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Successful operation",
+ *         @OA\JsonContent(
+ *             ref="#/components/schemas/UserDelete"
+ *         ),
+ *     ),
+ *     @OA\Response(
+ *         response=422,
+ *         description="Bad request",
+ *     )
+ * )
  */
 
 class UserController extends Controller
@@ -87,13 +177,55 @@ class UserController extends Controller
      *     ),
      *     @OA\Property(property="dev", type="string", nullable=true, example=null)
      * )
-     *
      * @OA\Schema(
      *     schema="UserStore",
      *     type="object",
+     *     title="Add User",
      *     required={"status_code", "message", "data"},
      *     @OA\Property(property="status_code", type="integer", example=201),
      *     @OA\Property(property="message", type="string", example="Data berhasil ditambahkan"),
+     *     @OA\Property(
+     *         property="data",
+     *         type="object",
+     *         ref="#/components/schemas/User"
+     *     ),
+     *     @OA\Property(property="dev", type="string", nullable=true, example=null)
+     * )
+     * @OA\Schema(
+     *     schema="UserGetDetail",
+     *     type="object",
+     *     title="Get Detail User",
+     *     required={"status_code", "message", "data"},
+     *     @OA\Property(property="status_code", type="integer", example=200),
+     *     @OA\Property(property="message", type="string", example="Data berhasil diambil"),
+     *     @OA\Property(
+     *         property="data",
+     *         type="object",
+     *         ref="#/components/schemas/User"
+     *     ),
+     *     @OA\Property(property="dev", type="string", nullable=true, example=null)
+     * )
+     * @OA\Schema(
+     *     schema="UserPutDetail",
+     *     type="object",
+     *     title="Update User",
+     *     required={"status_code", "message", "data"},
+     *     @OA\Property(property="status_code", type="integer", example=200),
+     *     @OA\Property(property="message", type="string", example="Data berhasil diubah"),
+     *     @OA\Property(
+     *         property="data",
+     *         type="object",
+     *         ref="#/components/schemas/User"
+     *     ),
+     *     @OA\Property(property="dev", type="string", nullable=true, example=null)
+     * )
+     * @OA\Schema(
+     *     schema="UserDelete",
+     *     type="object",
+     *     title="Update User",
+     *     required={"status_code", "message", "data"},
+     *     @OA\Property(property="status_code", type="integer", example=200),
+     *     @OA\Property(property="message", type="string", example="Data berhasil dihapus"),
      *     @OA\Property(
      *         property="data",
      *         type="object",
@@ -139,9 +271,15 @@ class UserController extends Controller
     /**
      * Display the specified resource.
      */
-    public function show(User $user)
+    public function show($user)
     {
-        return response()->success(data: $user);
+        try {
+            $user = User::findOrFail($user);
+            return response()->success(data: $user);
+        } catch (Exception $e) {
+            return response()->failed(message: $e->getMessage());
+        }
+
     }
 
     /**
@@ -158,7 +296,7 @@ class UserController extends Controller
         try {
             DB::beginTransaction();
 
-            if ($validated['password'] == null) {
+            if (@$validated['password'] == null) {
                 unset($validated['password']);
             } else {
                 $validated['password'] = Hash::make($validated['password']);
