# storage/api-docs/api-docs.json
@@ -100,6 +100,133 @@
                     }
                 }
             }
+        },
+        "/v1/users/{id}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get detail user",
+                "description": "Returns detail of user",
+                "operationId": "3113762acee587276022700f4043c9c8",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserGetDetail"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Bad request"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update user",
+                "description": "Returns updated user",
+                "operationId": "16f98b417452827504ecbabbe9afbc4f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "passwordPanjang"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserPutDetail"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Bad request"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get detail users",
+                "description": "Return deleted user",
+                "operationId": "f5725723b95e83803bc58c7b4ec730b1",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserDelete"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Bad request"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -155,6 +282,7 @@
                 "type": "object"
             },
             "UserStore": {
+                "title": "Add User",
                 "required": [
                     "status_code",
                     "message",
@@ -168,6 +296,87 @@
                     "message": {
                         "type": "string",
                         "example": "Data berhasil ditambahkan"
+                    },
+                    "data": {
+                        "$ref": "#/components/schemas/User"
+                    },
+                    "dev": {
+                        "type": "string",
+                        "example": null,
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "UserGetDetail": {
+                "title": "Get Detail User",
+                "required": [
+                    "status_code",
+                    "message",
+                    "data"
+                ],
+                "properties": {
+                    "status_code": {
+                        "type": "integer",
+                        "example": 200
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "Data berhasil diambil"
+                    },
+                    "data": {
+                        "$ref": "#/components/schemas/User"
+                    },
+                    "dev": {
+                        "type": "string",
+                        "example": null,
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "UserPutDetail": {
+                "title": "Update User",
+                "required": [
+                    "status_code",
+                    "message",
+                    "data"
+                ],
+                "properties": {
+                    "status_code": {
+                        "type": "integer",
+                        "example": 200
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "Data berhasil diubah"
+                    },
+                    "data": {
+                        "$ref": "#/components/schemas/User"
+                    },
+                    "dev": {
+                        "type": "string",
+                        "example": null,
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "UserDelete": {
+                "title": "Update User",
+                "required": [
+                    "status_code",
+                    "message",
+                    "data"
+                ],
+                "properties": {
+                    "status_code": {
+                        "type": "integer",
+                        "example": 200
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "Data berhasil dihapus"
                     },
                     "data": {
                         "$ref": "#/components/schemas/User"
